--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body {
 /* GENERAL */
 img {
     max-width: 100%;
+    height: auto;
     
 }
 
@@ -23,13 +24,20 @@ header {
     background-color: lightgray;
     display: flex;
     justify-content: space-between;
+    align-content: center;
     padding: 30px 20px;
+    position: sticky;
+    top: 0;
+    left: 0;
+    z-index: 10;
  }
 
+ 
 .left-head {
     width: 50%;
     display: flex;
     justify-content: flex-start;
+    align-content: center;
     gap: 40px;
 }
 
@@ -40,6 +48,8 @@ header {
     width: 50%;
     display: flex;
     justify-content: flex-end;
+    align-content: center;
+
     gap: 20px;
 }
 
@@ -53,3 +63,37 @@ header li {
     list-style: none;
     gap: 40px;
 }
+
+/* BUTTONS */
+
+.btn {
+    background: transparent;
+    border: none;
+    font-family: inherit;
+    padding: 6px 14px;
+}
+
+.btn-primary {
+    background-color:#0061FF;
+    color: #FFFFFF;
+}
+
+.btn-secondary {
+    background-color:#FFFFFF;
+    color: black;
+}
+
+.btn-large {
+    padding: 6px 70px;
+}
+
+.btn-tertiary{
+    border: 1px solid black;
+    background-color: white;
+}
+
+header .btn {
+    font-size: 16px;
+}
+
+/*  */
