--- a/style.css
+++ b/style.css
@@ -136,6 +136,15 @@ header .btn {
     border: 1px dashed black;
 }
 
+.container-small {
+    max-width: 1000px;
+    margin: 0 auto;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+
+
 .col-20 {
     width: 20%;
 }
@@ -185,3 +194,7 @@ header .btn {
 }
 
 /*  */
+
+.first > .container-small {
+    padding-top:160px ;
+}
