--- a/style.css
+++ b/style.css
@@ -170,8 +170,8 @@ header .btn {
 }
 
 .col-33 {
-    border: 1px solid black;
-}
+/*     border: 1px solid black;
+ */}
 
 .col-30 {
     width: 30%;
@@ -181,6 +181,12 @@ header .btn {
 
 .col-70 {
     width: 70%;
+    border: 1px dashed black;
+
+}
+
+.col-100 {
+    width: 100%;
     border: 1px dashed black;
 
 }
@@ -244,6 +250,11 @@ header .btn {
 }
 
 /* plans */
+
+.first .col-33{
+    border: 1px solid #D0D0D3;
+    
+}
 
 .plans{
     padding: 38px 30px 10px 30px;
