--- a/style.css
+++ b/style.css
@@ -334,9 +334,11 @@ header .btn {
     padding-bottom: 0 ;
 }
 
-.col-33 .icona{
+.col-33 .icona, .col-100 .icona{
     padding-right: 5px;
 }
+
+
 
 .col-33.sx{
     margin-right: 25px;
@@ -359,5 +361,6 @@ header .btn {
     padding-top: 50px;
     padding-bottom: 50px;
 }
+
 /*  */
 /*  */
