--- a/style.css
+++ b/style.css
@@ -380,7 +380,15 @@ header .btn {
     padding-bottom: 50px;
 }
 
+.first .row-bottom-top {
+    padding-top: 50px;
+    padding-bottom: 0;
+}
 
+.first .row-bottom-down{
+    padding-top: 0;
+    padding-bottom: 0;
+}
 
 /*  */
 /*  *
