feat sixth structure

--- a/style.css
+++ b/style.css
@@ -460,3 +460,18 @@ section.third{
 .fourth h2.titolo{
     padding-bottom:56px ;
 }
+
+/* fifth section */
+
+/*/ fifth section */
+
+/* sixth section */
+section.sixth {
+    background-color:#B4D0E7 ;
+}
+
+.row.row-sixth{
+    padding-top: 130px;
+    padding-bottom: 130px;
+}
+
