--- a/style.css
+++ b/style.css
@@ -122,7 +122,6 @@ header li {
 
 
 .btn-tertiary{
-    border: 1px solid black;
     background-color: white;
 }
 
@@ -475,3 +474,10 @@ section.sixth {
     padding-bottom: 130px;
 }
 
+.sixth .col-33bottom {
+    padding-top: 8px;
+}
+
+.sixth .col-33bottom {
+    text-align: end;
+}
