--- a/style.css
+++ b/style.css
@@ -485,3 +485,27 @@ section.sixth {
 .sixth .col-33bottom {
     text-align: end;
 }
+
+/* seventh section */
+.row.row-seventh-up{
+    display: block;
+    padding-top:155px ;
+    padding-bottom: 140px;
+
+}
+
+.faq-title {
+    padding-bottom: 66px;
+}
+
+.faq-parag{
+    border-top: 1px solid #9D9D9D;
+    border-bottom: 1px solid #9D9D9D;
+    
+}
+
+.faq-parag p {
+    padding: 38px 0;  
+
+}
+/*/ seventh section */
