--- a/style.css
+++ b/style.css
@@ -125,6 +125,11 @@ header li {
     background-color: white;
 }
 
+.btn-language{
+    color: #999999;
+    background-color: transparent;
+}
+
 .plans .btn-primary{
     width: 100%;
 }
@@ -176,6 +181,9 @@ header .btn {
     padding-right: 10px;
 }
 
+.col-12{
+    width: 12%;
+}
 
 .col-20 {
     width: 20%;
@@ -521,7 +529,7 @@ span.arrow {
 
 /* footer */
 footer {
-    background-color: #9D9D9D;
+    background-color: #000000;
 }
 
 footer .row.row-footer{
@@ -548,4 +556,13 @@ footer .row.row-footer{
     text-decoration: none;
 }
 
+footer .col-12{
+    border-top: 1px solid white;
+    padding: 50px 0 ;
+}
+
+
+.row-language >  {
+    color: #FFFFFF;
+}
 /* / footer */
