--- a/style.css
+++ b/style.css
@@ -128,6 +128,7 @@ header li {
 .btn-language{
     color: #999999;
     background-color: transparent;
+    font-size: 15px;
     padding: 0px;
 }
 
