--- a/style.css
+++ b/style.css
@@ -511,6 +511,18 @@ section.third{
  .box-4{
     background-color:#FF1C1C ;
  }
+ .box-5{
+    background-color: #D5001F ;
+ }
+ .box-6{
+    background-color:#B4D0E7 ;
+ }
+ .box-7{
+    background-color:#0D2481 ;
+ }
+ .box-8{
+    background-color:#FFD830 ;
+ }
 
 
 /* .partners .square-left, .partners .square-right {
