--- a/style.css
+++ b/style.css
@@ -485,7 +485,24 @@ section.third{
 }
 
 .partners .square-central{
+    display: block;
+    background-color: #F5F5F5;
     overflow-y: auto;
+    padding: 52px;
+    
+}
+
+.square-central hr{
+    color: #D0D0D3;
+    width: 20%;
+    margin-top: 40px;
+    margin-bottom: 40px;
+
+}
+
+.square-central p.partner-description {
+    margin-bottom: 50px;
+
 }
 
 .box {
@@ -533,6 +550,10 @@ section.third{
 .partners .square-left img, .partners .square-right img {
     width: 50%;
     filter: invert(1);
+}
+
+.main-partner {
+    width: 50%;
 }
 
 
