--- a/style.css
+++ b/style.css
@@ -604,7 +604,7 @@ section.free-trial {
 }
 
 /* seventh section */
-.row.row-seventh-up{
+.row.row-faq-up{
     display: block;
     padding-top:155px ;
     padding-bottom: 140px;
@@ -621,7 +621,7 @@ section.free-trial {
     justify-content: space-between;    
 }
 
-.seventh .faq-parag:last-of-type{
+.faq .faq-parag:last-of-type{
     border-bottom: 1px solid #9D9D9D
 }
 
